2010-10-25	Regis Balzard <rbalzard@inverse.ca>
	* pf/addons/802.1X/rlm_perl_packetfence.pl, pf/UPGRADE, pf/NEWS: 
	Re-worked the entire module: changed the tests order so we now filter
	by SSID; got rid of anything related to guest since guest should now be
	managed a distinct category; aadded a find_ssid() function in order to
	read the SSID name from the attributes sent in the request; removed
	many SQL queries and changed the one reading the node info; ...

2010-10-21	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/dhcp_fingerprints.conf: New DHCP Fingerprints:
	Cisco/Linksys, Netgear, D-Link Home Wireless Routers, Sony Ericsson
	Android and Fluke DTX (network tester)

	* pf/docs/PacketFence_Administration_Guide.odt: Added new "MySQL
	optimization tool" section under MySQL optimizations and put a new 
	title on top of the Captive portal optimizations (they were under
	MySQL optimizations!?)

2010-10-15      Francois Gaudreault <fgaudreault@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Addition of some
	documentation about log rotation.

2010-10-15	Francois Gaudreault <fgaudreault@inverse.ca>
	* pf/docs/PacketFence_Installation_Guide.odt: Add the groupinstall
	line for packetfence install.
	* pf/docs/PacketFence_Administration_Guide.odt: Addition of some
	documentation about Snort and Oinkmaster.

2010-10-13	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Revamped SMC section
	of the guide and added support instructions for 6128 L2.
	Also clarified some FreeRADIUS config.

	* pf/lib/pf/SNMP/SMC/TS6128L2.pm, pf/NEWS, pf/README_SWITCHES, 
	pf/UPGRADE, pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php,
	pf/lib/pf/SNMP/SMC/TS6224M.pm, pf/lib/pf/SNMP/SMC/TS8800M.pm,
	pf/lib/pf/SNMP/SMC.pm, pf/t/coding-style.t, pf/t/critic.t,
	pf/t/hardware-snmp-objects.t, pf/t/pod.t: New hardware support: SMC 
	TigerStack 6128 L2 in port-security (feature sponsored by Seattle 