@@ -1,0 +1,98 @@
+# Integration tests
+# see https://inverse.ca/wiki/focus/PacketFence/Testing
+[defaults]
+priority=4
+max_enable=3
+actions=email,log
+auto_enable=Y
+disable=Y
+grace=120m
+button_text=Enable Network
+snort_rules=local.rules,emerging-attack_response.rules,emerging-exploit.rules,emerging-p2p.rules,emerging-scan.rules,emerging-virus.rules
+# accepted values are the vlan names: isolationVlan, normalVlan, registrationVlan, macDetectionVlan, guestVlan, 
+#                                     customVlan1, customVlan2, customVlan3, customVlan4, customVlan5 
+# (see switches.conf)
+vlan=isolationVlan
+# if you add a category here, nodes in these categories will be immune to the violation
+whitelisted_categories=
+
+[2010001]
+desc=Remediation local with auto_enable
+priority=8
+actions=log,trap
+url=/content/index.php?template=p2p
+disable=N
+trigger=
+auto_enable=Y
+max_enable=0
+
+[2010002]
+desc=Remediation local without auto_enable
+priority=8
+actions=log,trap
+url=/content/index.php?template=p2p
+disable=N
+trigger=
+auto_enable=N
+max_enable=0
+
+[2010003]
+desc=Remediation external (domain) with auto_enable
+priority=8
+actions=log,trap
+url=http://www.inverse.ca/
+disable=N
+trigger=
+auto_enable=Y
+max_enable=0
+
+[2010004]
+desc=Remediation external (domain) without auto_enable
+priority=8
+actions=log,trap
+url=http://www.inverse.ca/
+disable=N
+trigger=
+auto_enable=N
+max_enable=0
+
+[2010005]
+desc=Remediation external (path) with auto_enable
+priority=8
+actions=log,trap
+url=http://www.packetfence.org/bugs/
+disable=N
+trigger=
+auto_enable=Y
+max_enable=0
+
+[2010006]
+desc=Remediation external (path) without auto_enable
+priority=8
+actions=log,trap
+url=http://www.packetfence.org/bugs/
+disable=N
+trigger=
+auto_enable=N
+max_enable=0
+
+[2010007]
+desc=Remediation external (file) with auto_enable
+priority=8
+actions=log,trap
+url=http://packetfence.org/tests/conficker.html
+disable=N
+trigger=
+auto_enable=Y
+max_enable=0
+
+[2010008]
+desc=Remediation external (file) without auto_enable
+priority=8
+actions=log,trap
+url=http://packetfence.org/tests/conficker.html
+disable=N
+trigger=
+auto_enable=N
+max_enable=0
+
