@@ -107,7 +107,8 @@ ProxyRequests Off
 
 RewriteLock %%install_dir%%/var/apache_rewrite_lock
 
-#NameVirtualHost *:80
+NameVirtualHost *:80
+NameVirtualHost *:443
 
 SSLPassPhraseDialog  builtin
 SSLSessionCache         dbm:%%install_dir%%/var/ssl_scache
@@ -171,6 +172,8 @@ SetEnvIf User-Agent ".*MSIE.*" \
   #RewriteRule ^/remupd/cidsync.upd$ - [F,L]
   #RewriteRule ^/NTInst/i386/cidsync.upd$ - [F,L]
 
+%%content-proxies%%
+
   # return 403 to Windows Proxy Autodetection (avoid server load)
   RewriteRule ^/wpad.dat$ - [F,L]
 
@@ -230,6 +233,7 @@ SetEnvIf User-Agent ".*MSIE.*" \
   </DirectoryMatch>
 
   SSLEngine on
+  SSLProxyEngine on
   SSLCertificateFile %%install_dir%%/conf/ssl/server.crt
   SSLCertificateKeyFile %%install_dir%%/conf/ssl/server.key
 
@@ -245,6 +249,8 @@ SetEnvIf User-Agent ".*MSIE.*" \
   #RewriteCond %{HTTP_USER_AGENT} !^BlackBerry
   #RewriteRule ^.*$ - [L,forbidden]
 
+%%content-proxies%%
+
   # return 403 to Windows Proxy Autodetection (avoid server load)
   RewriteRule ^/wpad.dat$ - [F,L]
 
@@ -255,7 +261,7 @@ SetEnvIf User-Agent ".*MSIE.*" \
   RewriteCond %{HTTP_USER_AGENT} "^Microsoft NCSI$" [OR]
   RewriteCond %{HTTP_USER_AGENT} ^Windows-Update-Agent.*
   RewriteRule ^.*$ - [L,forbidden]
-
+ 
   RewriteCond %{REQUEST_URI} !^/favicon.ico
   RewriteCond %{REQUEST_URI} !^/cgi-bin/redir.cgi
   RewriteCond %{REQUEST_URI} !^/cgi-bin/release.cgi
@@ -271,8 +277,6 @@ SetEnvIf User-Agent ".*MSIE.*" \
   RewriteRule ^.*$ https://%%hostname%%.%%domain%%/cgi-bin/redir.cgi?destination_url=https://%{HTTP_HOST}%{REQUEST_URI} [L,R=302]
 
 %%proxies%%                
-
-%%content-proxies%%
 
   <Location /content>
     Options Indexes FollowSymLinks ExecCGI
